# FIRE

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CNAME  README.md  glfw_CMakeLists.txt.in  todo.org
FIRE/: CMakeLists.txt
FIRE/assets/shaders/: GridFS.glsl  GridVS.glsl  HeightFS.glsl  HeightVS.glsl  PhongFS.glsl  PhongVS.glsl  texCoordsFS.glsl  texCoordsVS.glsl  textureSamplingFS.glsl  textureSamplingVS.glsl
FIRE/include/FIRE/: AssetFacade.h  Camera.h  CameraComponent.h  Component.h  FIRE.h  FontCharacter.h  GLFactory.h  GLRenderContext.h  InputComponent.h  InputListener.h  Key.h  KeyAction.h  LightComponent.h  MainLoop.h  Material.h  MaterialFactory.h  Matrix.h  Mesh.h  Mesh2D.h  Mesh3D.h  MeshFactory.h  MeshHandle.h  MeshManager.h  MeshType.h  Message.h  ModelLoader.h  MouseKey.h  Noise.h  OverlayBuilder.h  OverlayComponent.h  OverlaySubmitter.h  RenderContext.h  Renderable.h  RenderableBuilder.h  RenderableSubmitter.h  Renderer.h  RenderingComponent.h  Scene.h  SceneComponent.h  SceneObject.h  (+13 more)
FIRE/src/: AssetFacade.cpp  Camera.cpp  CameraComponent.cpp  Draw.h  DrawAgent.h  FIRE.cpp  FTFontLoader.cpp  FTFontLoader.h  FontCharacter.h  FontLoader.h  FontTextureFactory.h  GLBuffer.h  GLDraw.cpp  GLDraw.h  GLDrawAgent.cpp  GLDrawAgent.h  GLFactory.cpp  GLFontTextureFactory.cpp  GLFontTextureFactory.h  GLImageTextureFactory.cpp  GLImageTextureFactory.h  GLMaterialBinder.cpp  GLMaterialBinder.h  GLMeshUploader.cpp  GLMeshUploader.h  GLRenderContext.cpp  GLRenderContext.h  GLRenderer.cpp  GLRenderer.h  GLShaderFactory.cpp  GLShaderFactory.h  GLTextOverlayRenderer.cpp  GLTextOverlayRenderer.h  GLTextRenderer.cpp  GLTextRenderer.h  GLTexture2D.cpp  GLTexture2D.h  GLTextureFactory.cpp  GLTextureFactory.h  GLUploader.cpp  (+62 more)
FIRE/src/glad/include/glad/: glad.h
FIRE/src/glad/src/: glad.c
FIRE/src/glm/glm/detail/: type_quat.hpp
FIRE/test/: CMakeLists.txt  CameraComponentTest.cpp  CameraTest.cpp  FIRETest.cpp  InputListenerTest.cpp  MaterialFactoryTest.cpp  MaterialManagerTest.cpp  MaterialTest.cpp  MatrixTest.cpp  MeshFactoryTest.cpp  MeshManagerTest.cpp  MeshTest.cpp  RenderableTest.cpp  RendererTest.cpp  RenderingComponentTest.cpp  SceneComponentMock.h  SceneObjectTest.cpp  SceneTest.cpp  TextOverlayTest.cpp  TextureFactoryTest.cpp  TransformTest.cpp  Utilities.h  WindowTest.cpp
FIRE/test/FIRE_tests/: AssetFacadeTest.cpp  CameraComponentTest.cpp  InputListenerTest.cpp  MaterialFactoryTest.cpp  MaterialTest.cpp  MeshManagerTest.cpp  ModelLoaderTest.cpp  OverlayBuilderTest.cpp  RenderableBuilderTest.cpp  RenderableTest.cpp  RendererTest.cpp  RenderingComponentTest.cpp  SceneObjectTest.cpp  SceneTest.cpp  TextureManagerTest.cpp  TransformTest.cpp  Utilities.h  WindowTest.cpp
FIRE/test/FIRE_tests/Mocks/: ComponentStub.h  DrawMock.h  MaterialBinderMock.h  ShaderFactoryMock.h  Texture2DMock.h  TextureFactoryMock.h  VertexLayoutFactoryMock.h
FIRE/test/FIRE_tests/Stubs/: CubeOBJ.cpp  CubeOBJ.h  Texture2DStub.h  VertexLayoutStub.h
FIRE/test/Mocks/: TextureFactoryMock.h
FastNoise/: CMakeLists.txt
contrib/: CMakeLists.txt
contrib/FastNoise/src/: FastNoise.cpp
contrib/freetype-2.9/: CMakeLists.txt
contrib/freetype-2.9/msvc_19_0/debug/: freetyped.lib
contrib/freetype-2.9/msvc_19_0/release/: freetype.lib
contrib/glad/: CMakeLists.txt
contrib/glad/src/: glad.c
contrib/glfw-3.2.1/msvc_19_0/debug/: glfw3.lib
contrib/glfw-3.2.1/msvc_19_0/release/: glfw3.lib
contrib/glm-0.9.9/: CMakeLists.txt
contrib/gtest/googlemock/msvc_19_0/release/: gmock.lib  gmock_main.lib
contrib/gtest/googletest/msvc_19_0/debug/: gtest_maind.lib
contrib/gtest/googletest/msvc_19_0/release/: gtest.lib  gtest_main.lib
contrib/stb_image/: CMakeLists.txt
contrib/stb_image/include/stb_image/: stb_image.h
doc/: AssetFacade.puml  Input.plantuml  Material.plantuml  Mesh.plantuml  Renderer.plantuml  Texture.plantuml  classes.plantuml  classes.puml  input.plantuml  skin.iuml
examples/: CMakeLists.txt
examples/SceneTemplate/: CMakeLists.txt  PhongFS.glsl  PhongVS.glsl
examples/SceneTemplate/include/SceneTemplate/: Input.h  SceneTemplate.h
examples/SceneTemplate/src/: Input.cpp  SceneTemplate.cpp
examples/cube/: CMakeLists.txt  CubeCameraComponent.cpp  CubeCameraComponent.h  CubeInputComponent.cpp  CubeInputComponent.h  CubeLightComponent.cpp  CubeLightComponent.h  CubeOverlayComponent.cpp  CubeOverlayComponent.h  CubeRenderingComponent.cpp  CubeRenderingComponent.h  CubeSceneComponent.cpp  CubeSceneComponent.h  GridRenderingComponent.cpp  GridRenderingComponent.h  PhongFS.glsl  PhongVS.glsl  PlaneRenderingComponent.cpp  PlaneRenderingComponent.h  main.cpp
examples/cube/src/: main.cpp
examples/exampleComponents/: CMakeLists.txt
examples/exampleComponents/include/: FPSOverlayComponent.h  InputMappingComponent.h  Mesh3DRenderingComponent.h  PerspectiveCameraComponent.h  PointLightComponent.h
examples/exampleComponents/src/: FPSOverlayComponent.cpp  InputMappingComponent.cpp  Mesh3DRenderingComponent.cpp  PerspectiveCameraComponent.cpp  PointLightComponent.cpp
examples/simple/: CMakeLists.txt
examples/simple/src/: main.cpp
examples/sponza/: CMakeLists.txt
examples/sponza/src/: main.cpp
glfw/: CMakeLists.txt  glfw_build.cmake
gtest/: CMakeLists.txt  gtest_build.cmake
include/: assets.h  camera.h  compileMaterial.h  entity.h  fontManager.h  keyhandler.h  keyhandlerListener.h  material.h  materialMap.h  mesh.h  meshUtilities.h  renderableManager.h  scene.h  sceneComponent.h  sceneManager.h  texture.h  tokenize.h  transform.h  vertexDeclaration.h
shaders/: defaultWhiteFS.glsl  defaultWhiteVS.glsl
src/: camera.cpp  compileMaterial.cpp  entity.cpp  fontManager.cpp  material.cpp  mesh.cpp  meshFactory.cpp  (+8 more)
test/: CMakeLists.txt  findByNameTest.cpp  indexDataTest.cpp  materialFactoryTest.cpp  materialTest.cpp  renderableTest.cpp  rendererTest.cpp  rootTest.cpp  sceneTest.cpp  shaderParserTest.cpp  shaderTest.cpp  textureBinderTest.cpp  tokenizeTest.cpp  vertexDataTest.cpp  vertexDeclarationTest.cpp  windowTest.cpp
test/old/: entityTest.cpp  transformTest.cpp
(+92 files in other folders)
